# game_core

./: README.md
laboratory_work/: CMakeLists.txt  Soldier.cpp  Tank.cpp  main.cpp  map.cpp  objects.cpp  player.cpp
laboratory_work/headers/: NPC.h  Soldier.h  Tank.h  enemy.h  map.h  objects.h  player.h
